Fix: link css file to index.html and size of logo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/public/nkc-favicon.png" />
+    <link rel="stylesheet" href="/src/index.css?v=20260212">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>株式会社 NK CONSULTING | 横浜の経営コンサルティング会社</title>
   </head>
